# NeoCraft

./: .gitignore  .mcp.json  Command.md  Fabric.md  Paper.md  RCON.md  README-ZH.md  README.md  Spigot.md  Vanilla.md  package-lock.json  package.json
.codex/: config.toml
.learnings/: ERRORS.md  LEARNINGS.md
daemon/: Cargo.toml
daemon/src/: affinity.rs  auth.rs  detect.rs  docker.rs  downloader.rs  files.rs  handler.rs  instance.rs  instance_files.rs  ipc.rs  java_args.rs  java_detect.rs  lib.rs  logpipe.rs  main.rs  management.rs  monitor.rs  paths.rs  protocol.rs  transport.rs  util.rs
daemon/tests/: affinity_tests.rs  config_tests.rs  file_security_tests.rs  instance_tests.rs  integration.rs  ipc_tests.rs  logpipe_tests.rs  monitor_tests.rs  protocol_tests.rs
docs/plans/: 2026-05-30-minecraft-server-panel-design.md  2026-05-30-neocraft-implementation.md  2026-06-01-server-management-design.md  2026-06-01-server-management-plan.md  2026-06-08-minecraft-theme-design.md  2026-06-08-minecraft-themes-design.md  workflow-server-management.js
docs/superpowers/specs/: 2026-06-13-modpack-import-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: WebSocketProvider.tsx  useSmpActivity.ts  useSmpConnection.ts  useWebSocket.ts
scripts/: build.mjs  build.sh  dev.mjs  dev.sh
server/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
server/src/: app.ts  config.ts  index.ts
server/tests/: config.test.ts
(+74 files in other folders)
