[package]
name = "neocraft-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
sysinfo = "0.33"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
libc = "0.2.186"
which = "7"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
